@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "August 12, 2019" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "October 21, 2019" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -614,6 +614,7 @@ that prints the current value of all options.
 In the third form,
 sets the current language to
 .IR lang .
+Unambiguous option name abbreviations may be used.
 .TP
 .BR show " { " \f2s-name\fP " | " all " | " predefined " | " user " } [" typedef ]
 Shows the definition for a previously defined type
